--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         - id: payment
           uri: http://localhost:8082
           predicates:
-            - Path=/payments/** 
+            - Path=/payments/**,/cancellations/**  
         - id: mypage
           uri: http://localhost:8083
           predicates:
