movie donation 추가

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: 8088
-
 ---
-
 spring:
   profiles: default
   cloud:
@@ -11,11 +9,11 @@ spring:
         - id: book
           uri: http://localhost:8081
           predicates:
-            - Path=/books/** 
+            - Path=/books/**
         - id: payment
           uri: http://localhost:8082
           predicates:
-            - Path=/payments/** 
+            - Path=/payments/**
         - id: mypage
           uri: http://localhost:8083
           predicates:
@@ -23,10 +21,15 @@ spring:
         - id: ticket
           uri: http://localhost:8084
           predicates:
-            - Path=/tickets/** 
+            - Path=/tickets/**
+        - id: donation
+          uri: http://localhost:8085
+          predicates:
+            - Path=/donations/**
+
       globalcors:
         corsConfigurations:
-          '[/**]':
+          "[/**]":
             allowedOrigins:
               - "*"
             allowedMethods:
@@ -34,10 +37,7 @@ spring:
             allowedHeaders:
               - "*"
             allowCredentials: true
-
-
 ---
-
 spring:
   profiles: docker
   cloud:
@@ -46,11 +46,11 @@ spring:
         - id: book
           uri: http://book:8080
           predicates:
-            - Path=/books/** 
+            - Path=/books/**
         - id: payment
           uri: http://payment:8080
           predicates:
-            - Path=/payments/** 
+            - Path=/payments/**
         - id: mypage
           uri: http://mypage:8080
           predicates:
@@ -58,10 +58,14 @@ spring:
         - id: ticket
           uri: http://ticket:8080
           predicates:
-            - Path=/tickets/** 
+            - Path=/tickets/**
+        - id: donation
+          uri: http://localhost:8085
+          predicates:
+            - Path=/donations/**
       globalcors:
         corsConfigurations:
-          '[/**]':
+          "[/**]":
             allowedOrigins:
               - "*"
             allowedMethods:
