--- a/mypage/buildspec.yaml
+++ b/mypage/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "mypage"
     _PROJECT_DIR: "mypage"
-    CODEBUILD_RESOLVED_SOURCE_VERSION: "v1"
+    CODEBUILD_RESOLVED_SOURCE_VERSION: "latest"
 
 phases:
   install:
@@ -47,6 +47,7 @@ phases:
         kind: Service
         metadata:
           name: $_PROJECT_NAME
+          namespace: movie
           labels:
             app: $_PROJECT_NAME
         spec:
@@ -62,6 +63,7 @@ phases:
         kind: Deployment
         metadata:
           name: $_PROJECT_NAME
+          namespace: movie
           labels:
             app: $_PROJECT_NAME
         spec:
