--- a/ticket/buildspec.yaml
+++ b/ticket/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "ticket"
     _PROJECT_DIR: "ticket"
-    CODEBUILD_RESOLVED_SOURCE_VERSION: "v1"
+    CODEBUILD_RESOLVED_SOURCE_VERSION: "latest"
 
 phases:
   install:
@@ -47,6 +47,7 @@ phases:
         kind: Service
         metadata:
           name: $_PROJECT_NAME
+          namespace: movie
           labels:
             app: $_PROJECT_NAME
         spec:
@@ -62,6 +63,7 @@ phases:
         kind: Deployment
         metadata:
           name: $_PROJECT_NAME
+          namespace: movie
           labels:
             app: $_PROJECT_NAME
         spec:
@@ -81,7 +83,7 @@ phases:
                     - containerPort: 8080
                   readinessProbe:
                     httpGet:
-                      path: /actuator/health
+                      path: /abcd
                       port: 8080
                     initialDelaySeconds: 10
                     timeoutSeconds: 2
