--- a/book/buildspec.yaml
+++ b/book/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "book"
     _PROJECT_DIR: "book"
-    CODEBUILD_RESOLVED_SOURCE_VERSION : "latest"
+    CODEBUILD_RESOLVED_SOURCE_VERSION : "v4"
 
 phases:
   install:
