--- a/gateway/buildspec.yaml
+++ b/gateway/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "gateway"
     _PROJECT_DIR: "gateway"
-    CODEBUILD_RESOLVED_SOURCE_VERSION: "latest"
+    CODEBUILD_RESOLVED_SOURCE_VERSION: "v4"
 
 phases:
   install:
