--- a/mypage/buildspec.yaml
+++ b/mypage/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "mypage"
     _PROJECT_DIR: "mypage"
-    CODEBUILD_RESOLVED_SOURCE_VERSION: "latest"
+    CODEBUILD_RESOLVED_SOURCE_VERSION: "v4"
 
 phases:
   install:
