--- a/ticket/buildspec.yaml
+++ b/ticket/buildspec.yaml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "ticket"
     _PROJECT_DIR: "ticket"
-    CODEBUILD_RESOLVED_SOURCE_VERSION: "latest"
+    CODEBUILD_RESOLVED_SOURCE_VERSION: "v4"
 
 phases:
   install:
