--- a/payment/buildspec.yaml
+++ b/payment/buildspec.yaml
@@ -83,7 +83,7 @@ phases:
                     - containerPort: 8080
                   readinessProbe:
                     httpGet:
-                      path: /actuator/health
+                      path: /abc
                       port: 8080
                     initialDelaySeconds: 10
                     timeoutSeconds: 2
