서킷 브레이킹 로직 추가

--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -35,6 +35,10 @@ logging:
   level:
     org.hibernate.type: trace
     org.springframework.cloud: debug
+hystrix:
+  command:
+    default:
+      execution.isolation.thread.timeoutInMilliseconds: 610
 server:
   port: 8082
 ---
