--- a/book/buildspec.yaml
+++ b/book/buildspec.yaml
@@ -81,6 +81,12 @@ phases:
                     image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/skteam03-$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
                     ports:
                       - containerPort: 8080
+                    env:
+                      - name: NAME
+                      valueFrom:
+                        configMapKeyRef:
+                          name: moviecm
+                          key: text1
                     readinessProbe:
                       httpGet:
                         path: /actuator/health
