--- a/book/kubernetes/deployment.yml
+++ b/book/kubernetes/deployment.yml
@@ -1,27 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: book
+  name: $_PROJECT_NAME
+  namespace: movie
   labels:
-    app: book
+    app: $_PROJECT_NAME
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: book
+      app: $_PROJECT_NAME
   template:
     metadata:
       labels:
-        app: book
+        app: $_PROJECT_NAME
     spec:
       containers:
-        - name: book
-          image: username/book:latest
+        - name: $_PROJECT_NAME
+          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/skteam03-$_PROJECT_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
           ports:
             - containerPort: 8080
+          env:
+            - name: NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: moviecm
+                  key: text1
           readinessProbe:
             httpGet:
-              path: '/actuator/health'
+              path: /actuator/health
               port: 8080
             initialDelaySeconds: 10
             timeoutSeconds: 2
@@ -29,7 +36,7 @@ spec:
             failureThreshold: 10
           livenessProbe:
             httpGet:
-              path: '/actuator/health'
+              path: /actuator/health
               port: 8080
             initialDelaySeconds: 120
             timeoutSeconds: 2
