--- a/book/kubernetes/deployment.yml
+++ b/book/kubernetes/deployment.yml
@@ -17,28 +17,12 @@ spec:
     spec:
       containers:
         - name: book
-          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/skteam03-book:v10
+          image: 496278789073.dkr.ecr.ap-northeast-2.amazonaws.com/skteam03-book:v10
           ports:
             - containerPort: 8080
           env:
-            - name: NAME
+            - name: LANGUAGE
               valueFrom:
                 configMapKeyRef:
-                  name: moviecm
-                  key: text1
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8080
-            initialDelaySeconds: 10
-            timeoutSeconds: 2
-            periodSeconds: 5
-            failureThreshold: 10
-          livenessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8080
-            initialDelaySeconds: 120
-            timeoutSeconds: 2
-            periodSeconds: 5
-            failureThreshold: 5
+                  name: hello-cm
+                  key: language
