book hystrix 추가

--- a/book/src/main/resources/application.yml
+++ b/book/src/main/resources/application.yml
@@ -62,3 +62,8 @@ spring:
         event-out:
           destination: movie
           contentType: application/json
+
+hystrix:
+  command:
+    default:
+      execution.isolation.thread.timeoutInMilliseconds: 1000
