--- a/book/src/main/resources/application.yml
+++ b/book/src/main/resources/application.yml
@@ -63,6 +63,10 @@ spring:
           destination: movie
           contentType: application/json
 
+feign:
+  hystrix:
+    enabled: true
+
 hystrix:
   command:
     default:
